--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -11,8 +11,8 @@
             <div class="col-sm-8">
                 <div class="overflow-h">
                     <div class="pull-left headline1">
-                        <h2>LARK (Larisa Pilinsky)</h2>
-                        <span>Artist</span>
+                        <h2>Larisa Pilinsky</h2>
+                        <span>LARK</span>
                     </div>
                     <ul class="social-icons pull-right">
                         <li><a class="rounded-x social_facebook" data-original-title="Facebook" href="#"></a></li>
@@ -42,9 +42,8 @@
      <!-- Parallax Quote -->
     <div class="parallax-quote parallax-quote-light parallaxBg">
         <div class="container">
-            <div class="parallax-quote-in rounded">
-                <p>With her deeply emotional sense of beauty and romance, Lark uses found objects to create light and space</p>
-                <small>- Review -</small>
+            <div class="headline-center headline-light">
+                <h2>" With her deeply emotional sense of beauty and romance, Lark uses found objects to create light and space "</h2>
             </div>
         </div>
     </div>
@@ -94,21 +93,21 @@
         <li class="col-md-3 col-sm-6">
             <img class="img-responsive" src="/img/lark/art/where-are-you-.jpg" alt="">
             <div class="portfolio-box-v1-in">
-                <h3>Footer art 1</h3>
+                <h3>art 1</h3>
                 <p>Short description</p>
             </div>
         </li>
         <li class="col-md-3 col-sm-6">
             <img class="img-responsive" src="/img/lark/art/LarkTheVoice-you-want300.jpg" alt="">
             <div class="portfolio-box-v1-in">
-                <h3>Footer art 2</h3>
+                <h3>art 2</h3>
                 <p>Short description</p>
             </div>
         </li>
         <li class="col-md-3 col-sm-6">
             <img class="img-responsive" src="/img/lark/art/escapeweb.jpg" alt="">
             <div class="portfolio-box-v1-in">
-                <h3>Footer art 4</h3>
+                <h3>art 4</h3>
                 <p>Short description</p>
             </div>
         </li>
