applied fixed height to all the images

--- a/client/templates/common/image.html
+++ b/client/templates/common/image.html
@@ -2,7 +2,7 @@
 <div class="cbp-item">
     <div class="cbp-caption margin-bottom-60">
         <div class="cbp-caption-defaultWrap">
-            <img src="{{url}}" alt="">
+            <img src="{{url}}" alt="" class="img-thumbnail">
         </div>
         {{#if username}}
         <div class="cbp-caption-activeWrap">
