--- a/client/stylesheets/custom.css
+++ b/client/stylesheets/custom.css
@@ -64,6 +64,10 @@
     vertical-align: top;
 }
 
+.img-thumbnail{
+    height: 400px;
+}
+
 p {
     text-align: justify;
     text-justify: inter-word;
