--- a/client/templates/common/image.html
+++ b/client/templates/common/image.html
@@ -1,15 +1,16 @@
 <template name="image">
 <div class="cbp-item">
-  <a href="{{url}}" class="cbp-caption cbp-singlePageInline"
-       data-title="{{title}}" 
-       data-lightbox={{getCurrentCategory}}>
-
-    <div class="cbp-caption margin-bottom-60">
+  
+    <div class="cbp-caption">
         <div class="cbp-caption-defaultWrap">
-            <img src="{{url}}" alt="" class="img-thumbnail">
+            <a href="{{url}}" class="cbp-caption cbp-singlePageInline"
+               data-title="{{title}}" data-lightbox={{getCurrentCategory}}>
+                <img src="{{url}}" alt="" class="img-thumbnail">
+            </a>
+
         </div>
     </div>
-  </a>
+  
         {{#if username}}
         <div class="cbp-caption-activeWrap">
             <div class="cbp-l-caption-alignCenter">
