--- a/client/stylesheets/custom.css
+++ b/client/stylesheets/custom.css
@@ -78,6 +78,12 @@
     text-transform:none;
 }
 
+.shrink-logo{
+    height:200px !important;
+    margin-top: -30px;
+    max-height: 300px !important;
+}
+
 p {
     text-align: justify;
     text-justify: inter-word;
