udpates the title

--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -11,8 +11,8 @@
             <div class="col-sm-8">
                 <div class="overflow-h">
                     <div class="pull-left headline1">
-                        <h2>Larisa Pilinsky</h2>
-                        <span>LARK</span>
+                        <h2>Lark</h2>
+                        <span>Lark Pilinsky</span>
                     </div>
                     <ul class="social-icons pull-right">
                         <li><a class="rounded-x social_facebook" data-original-title="Facebook" href="#"></a></li>
