--- a/client/templates/common/pageheader.html
+++ b/client/templates/common/pageheader.html
@@ -2,7 +2,7 @@
     <!--=== Breadcrumbs ===-->
     <div class="breadcrumbs breadcrumbs-light">
         <div class="container">
-            <h1 class="pull-right">Larisa Pilinsky</h1>
+            <h1 class="pull-right">Lark</h1>
         </div>
     </div>
     <!--=== End Breadcrumbs ===-->
