--- a/client/templates/pages/gallery.html
+++ b/client/templates/pages/gallery.html
@@ -28,10 +28,10 @@
                     {{> image}}
                     {{/each}}
                 </div>
-
+               <!--  <span class="stretch"></span>  -->
                 {{> addInfo}} 
             </div>
-
+               
             <!-- End Cube Portfolio -->
         </div>
     <!-- End Portfolio -->
