--- a/client/templates/pages/gallery.html
+++ b/client/templates/pages/gallery.html
@@ -27,8 +27,9 @@
                     {{#each images getCurrentCategory}}
                     {{> image}}
                     {{/each}}
+                <span class="stretch"></span>                               
                 </div>
-               <!--  <span class="stretch"></span>  -->
+                
                 {{> addInfo}} 
             </div>
                
