Edit Bio and about

--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -21,18 +21,11 @@
                         <li><a class="rounded-x social_linkedin" data-original-title="Linkedin" href="#"></a></li>
                     </ul>
                 </div>
-                <p>The Magic in My Art and Heart</p>
-                <p>For me creation is a dialogue with the world. I listen to voices that could lead my hand, and watch things that appeal to my eyes. I don't always know when I will start working on my art. Perhaps it will be five minutes. Or five hours. Or five days.</p>
-
-                <p>I can stop right in the middle of my studio after seeing something that attracts my attention. It could be a broken mechanism or an interesting combination of colorful papers and cardboards. Or just a torn shoe lace tenderly hugging another torn shoe lace, the two of them starting a new drama for me.</p>
-
-                <p>I cannot help but hear and become absorbed in listening to the rusty voice of an old metal bed frame, the elegant nostalgic whisper of an old silk tissue, the kindly rural chatter of a wooden armoire, or the sexy baritone of a velvet glove.</p>
-
-                <p>Together these impressions of my senses turn into a group of actors in costume, an orchestra of colors, and ballet of lines and shapes. All I need now - to choose who will be the star today: who will be prima ballerina, and who will go into the shade.</p>
-
-                <p>This mystical playtime often keeps me up until early in the morning, when my husband has been long asleep and my dog snores happily at my feet. Eventually, I have to end the drama and finish the picture.</p>
-
-                <p>For you who view my work, I hope this well be a new beginning. Feel free to begin a dialogue with my picture and, through it, my world. Make the play as endless as you like. Vary the heroes, actors and music. Make this world come alive with the magic of your imagination.</p><br>
+                <h2> <p>LARK:</p> </h2>
+                <p>
+                   For me creation is a dialogue with the world. I listen to voices that could lead my hand, and watch things that appeal to my eyes. Using the interaction of spiritual meditation and art materials I encourage images to appear from my subconscious. I also bring reflections of world around me into my paintings, inviting viewers to experience healing powers of nature.
+                </p>
+                <br>
 
             </div>
         </div>
@@ -65,13 +58,20 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-6">
-                    <p>Born in the remote mountains of central Asia,
-                        <font size="2" face="Geneva, Arial, Helvetica, sans-serif"><font color="#660000" size="3"><strong>Lark</strong> </font>(Larisa Pilinsky)</font> grew up in Ukraine and studied art in Russia. She first became known for her work with the&nbsp;award-winning Bunker Art Group of Armenia - "fellow rebels in abstraction" against Soviet artistic repression. </p>
-                    <p>Since emigrating&nbsp;to the United&nbsp;States in 1991, <font size="2" face="Geneva, Arial, Helvetica, sans-serif"><font color="#660000" size="3"><strong>Lark</strong></font></font> has been recognized by respected critics and dealers. Her assemblages and, more recently, her paintings, have been featured in more than 30 solo and group shows including the Nickelodeon Animation Studios, the Avatar Art Gallery, the Swedish-American Museum of Art, and the Museums of&nbsp;Contemporary Art in Armenia and Russia. Lark's work has been selected through&nbsp;juried competitions by the SoHo International Art Competition&nbsp;and the Foundation of Collage Artists of America.</p>
-                    <p><font size="2" face="Geneva, Arial, Helvetica, sans-serif"><font color="#660000" size="3"><strong>Lark</strong></font></font> creates assemblages by recycling found objects and processing them through spiritual meditation, encouraging images to appear out of her subconscious, awakening both familiar and unfamiliar thoughts in viewers. Learning about her materials by exploring both their formal and their narrative qualities, she simultaneously reformulates them according to her deeply emotional, poetically romantic sense of beauty.</p>
-                    <p>Their original functions discarded, their origins long forgotten, the objects she engages and interacts with are free to play imagined roles, resonating within one another and telling countless tales. </p><br>
+           <div class="row">
+            <div class="col-md-6">
+                <p>Born in the remote mountains of central Asia, where her father was a geologist, and surrounded by wild nature, beautiful minerals and semi-precious stones, Lark (Larisa Pilinsky) developed from her childhood intimate relationship with the world around her.</p>
+
+                <p>“Nature for me is alive, tender, joyful and suffering, she tells me about her feelings and helps me to share mine through art and poetry. She gives me energy, inspiration and healing when I feel physical or emotional pain.” </p>
+
+                <p>Using her unique style, composed from meditation and intuition, Lark brings subconscious reflections of nature into her art, inviting viewers to experience its healing powers. Her art also sends an environmental message combatting waste by serving as an example of how new life can be breathed into discarded objects, rekindling a positive future by acting pro-active in the present.</p>
+
+                 <p>Through workshops, Lark also shares with children and teenagers her transformational process of creating nature-related art. In doing so, she  helps youth feel what it is to be part of nature and attune themselves to the ecological issues which dominate our future.</p>
+
+                 <p>From the beginning of her art career, Lark’s art caught the attention of art lovers and gained recognition from art jurors including LA Weekly critic Peter Frank, Sweeney Art Gallery director Tyler Stallings, Santa Monica Museum of Art director Lisa Melandri and  MOCA curator Alma Ruiz.</p>
+
+                 <p>Articles about Lark's art and achievements were published in the Immigrant Magazine, the Art-to-Art Palette Journal and Online Art Magazine “Crave” describing her work and career.</p> 
+          <br>
                 </div>
                 <div class="col-md-6">
                     <div class="thumbnails-v1">
@@ -88,28 +88,28 @@
         <li class="col-md-3 col-sm-6">
             <img class="img-responsive" src="/img/lark/art/escapeweb.jpg" alt="">
             <div class="portfolio-box-v1-in">
-                <h3>Footer art 3</h3>
+                <h3>Footer art 1</h3>
                 <p>Short description</p>
             </div>
         </li>
         <li class="col-md-3 col-sm-6">
-            <img class="img-responsive" src="/img/lark/art/where-are-you-.jpg" alt="">
+      <img class="img-responsive" src="/img/lark/art/where-are-you-.jpg" alt="">
             <div class="portfolio-box-v1-in">
-                <h3>art 1</h3>
+                <h3>Footer art 2</h3>
                 <p>Short description</p>
             </div>
         </li>
         <li class="col-md-3 col-sm-6">
             <img class="img-responsive" src="/img/lark/art/LarkTheVoice-you-want300.jpg" alt="">
             <div class="portfolio-box-v1-in">
-                <h3>art 2</h3>
+                <h3>Footer art 3</h3>
                 <p>Short description</p>
             </div>
         </li>
         <li class="col-md-3 col-sm-6">
             <img class="img-responsive" src="/img/lark/art/escapeweb.jpg" alt="">
             <div class="portfolio-box-v1-in">
-                <h3>art 4</h3>
+                <h3>Footer art 4</h3>
                 <p>Short description</p>
             </div>
         </li>
