Footer images updated , profile section updated .

--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -21,9 +21,9 @@
                         <li><a class="rounded-x social_linkedin" data-original-title="Linkedin" href="#"></a></li>
                     </ul>
                 </div>
-                <h2> <p>LARK:</p> </h2>
                 <p>
-                   For me creation is a dialogue with the world. I listen to voices that could lead my hand, and watch things that appeal to my eyes. Using the interaction of spiritual meditation and art materials I encourage images to appear from my subconscious. I also bring reflections of world around me into my paintings, inviting viewers to experience healing powers of nature.
+                    In her recent landscapes, which began as highly abstract improvisations but have become increasingly and strikingly representational, Lark recalls the rural settings of her youth.Both vivid and darkly atmospheric, these paintings are not only beautiful and poignant but alive with both joy and pain. And always, they are haunted and illuminated by the poetry she writes to accompany her art, adding structure to her subtly embedded visual forms, and suggesting that art is Lark’s way of making poems, using colors and strokes to explore and illustrate the broad spectrum of human emotions.
+                 
                 </p>
                 <br>
 
@@ -86,31 +86,33 @@
 
     <ul class="list-unstyled row portfolio-box-v1">
         <li class="col-md-3 col-sm-6">
-            <img class="img-responsive" src="/img/lark/art/escapeweb.jpg" alt="">
+            <img class="img-responsive" id="a" src="/img/lark/art/footer/3_Lark_Emerald_Morning.jpg" alt="">
             <div class="portfolio-box-v1-in">
                 <h3>Footer art 1</h3>
-                <p>Short description</p>
+                <p> Short description</p>
             </div>
         </li>
         <li class="col-md-3 col-sm-6">
-      <img class="img-responsive" src="/img/lark/art/where-are-you-.jpg" alt="">
+      <img class="img-responsive" id="a" src="/img/lark/art/footer/LarkTheVoice.jpg" alt="">
             <div class="portfolio-box-v1-in">
                 <h3>Footer art 2</h3>
-                <p>Short description</p>
+                <p> Short description</p>
             </div>
         </li>
         <li class="col-md-3 col-sm-6">
-            <img class="img-responsive" src="/img/lark/art/LarkTheVoice-you-want300.jpg" alt="">
+        
+            <img class="img-responsive" id="a" src="/img/lark/art/footer/Strange Guest.jpg" alt="">
+        
             <div class="portfolio-box-v1-in">
                 <h3>Footer art 3</h3>
-                <p>Short description</p>
+                <p> Short description</p>
             </div>
         </li>
         <li class="col-md-3 col-sm-6">
-            <img class="img-responsive" src="/img/lark/art/escapeweb.jpg" alt="">
+            <img class="img-responsive" id="a" src="/img/lark/art/footer/Vibrant Sunrise.jpg" alt="">
             <div class="portfolio-box-v1-in">
                 <h3>Footer art 4</h3>
-                <p>Short description</p>
+                <p> Short description</p>
             </div>
         </li>
     </ul>
