center position images
testimonial carousel

--- a/client/templates/common/image.html
+++ b/client/templates/common/image.html
@@ -1,5 +1,5 @@
 <template name="image">
-<div class="cbp-item" id="image">
+<div class="cbp-item">
   
     <div class="cbp-caption">
         <div class="cbp-caption-defaultWrap">
