--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -35,8 +35,23 @@
      <!-- Parallax Quote -->
     <div class="parallax-quote parallax-quote-light parallaxBg">
         <div class="container">
-            <div class="headline-center headline-light">
-                <h2>" With her deeply emotional sense of beauty and romance, Lark uses found objects to create light and space "</h2>
+            <div class="headline-center headline-light owl-carousel">
+
+                    <div>
+                        <h2>" With her deeply emotional sense of beauty and romance, Lark uses found objects to create light and space "</h2>
+
+                        <span>Jimmy Howell, <a href="#">CEO, Director</a></span>
+
+                    </div>
+                    <div>
+                        <h2>" 222 With her deeply emotional sense of beauty and romance, Lark uses found objects to create light and space "</h2>
+
+                        <small>- KATHY REYES -</small>
+                    </div>
+                    <div>
+                        <h2>" 333 With her deeply emotional sense of beauty and romance, Lark uses found objects to create light and space "</h2>
+                    </div>
+
             </div>
         </div>
     </div>
