--- a/client/stylesheets/custom.css
+++ b/client/stylesheets/custom.css
@@ -66,7 +66,10 @@
 }
 
 .img-thumbnail{
-    height: 300px;
+    object-fit: none;
+    object-position: center;
+    height: 500px;
+    width: 250px;
 }
 
 .cube-portfolio .cbp-l-grid-agency-title {
@@ -83,6 +86,10 @@
     height:180px !important;
     margin-top: -30px;
     max-height: 300px !important;
+}
+
+.owl-carousel .item{
+    width: 100%;
 }
 
 p {
