--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -38,18 +38,19 @@
             <div class="headline-center headline-light owl-carousel">
 
                     <div>
-                        <h2>" With her deeply emotional sense of beauty and romance, Lark uses found objects to create light and space "</h2>
+                        <h2>" I am rarely a 'fan' of any artist, but LARK aka Larisa Pilinsky is an exceptional phenomenon. Besides her brilliant sense of composition, she is the ultimate "Green Artist" or maybe she is also the grand 'love child' of Kandinsky and Schwitters, but regardless I find Lark's talent is built from the 'shoulders' of masters of 20th century. "</h2>
 
-                        <span>Jimmy Howell, <a href="#">CEO, Director</a></span>
+                        <span>- Tony Clark, Chévalier dans l'Ordre des Arts et des Lettres, American Association Of Museum Directors Board Member -</span>
 
                     </div>
                     <div>
-                        <h2>" 222 With her deeply emotional sense of beauty and romance, Lark uses found objects to create light and space "</h2>
+                        <h2>" Lark's paintings with their soft amazing shades and musical language reflect her inner poetry. That’s why, looking at her artworks, you think, "That’s so right, that’s exactly what I want to say to the world...Lark gives me real freedom of expression. Looking at her paintings how can you not recognize the refreshing, cleansing and healing-the-body-and-soul act of a real artist? "</h2>
 
-                        <small>- KATHY REYES -</small>
+                        <span>- IrIna ShulkIn, Wholesome Nutrition Instructor -</span>
                     </div>
                     <div>
-                        <h2>" 333 With her deeply emotional sense of beauty and romance, Lark uses found objects to create light and space "</h2>
+                        <h2>" I just want to state once more time how much I am a fan of your work, there is something deeply intense and critical in the personal sensibilities and modalities of your art works. A midst a plethora of art, you manage to say something very different. "</h2>
+                        <span>- SuzIe Maria, Editorial Director -</span>
                     </div>
 
             </div>
@@ -77,7 +78,7 @@
             <div class="col-md-6">
                 <p>Born in the remote mountains of central Asia, where her father was a geologist, and surrounded by wild nature, beautiful minerals and semi-precious stones, Lark (Larisa Pilinsky) developed from her childhood intimate relationship with the world around her.</p>
 
-                <p>“Nature for me is alive, tender, joyful and suffering, she tells me about her feelings and helps me to share mine through art and poetry. She gives me energy, inspiration and healing when I feel physical or emotional pain.” </p>
+                <p>"Nature for me is alive, tender, joyful and suffering, she tells me about her feelings and helps me to share mine through art and poetry. She gives me energy, inspiration and healing when I feel physical or emotional pain.” </p>
 
                 <p>Using her unique style, composed from meditation and intuition, Lark brings subconscious reflections of nature into her art, inviting viewers to experience its healing powers. Her art also sends an environmental message combatting waste by serving as an example of how new life can be breathed into discarded objects, rekindling a positive future by acting pro-active in the present.</p>
 
@@ -85,7 +86,7 @@
 
                  <p>From the beginning of her art career, Lark’s art caught the attention of art lovers and gained recognition from art jurors including LA Weekly critic Peter Frank, Sweeney Art Gallery director Tyler Stallings, Santa Monica Museum of Art director Lisa Melandri and  MOCA curator Alma Ruiz.</p>
 
-                 <p>Articles about Lark's art and achievements were published in the Immigrant Magazine, the Art-to-Art Palette Journal and Online Art Magazine “Crave” describing her work and career.</p> 
+                 <p>Articles about Lark's art and achievements were published in the Immigrant Magazine, the Art-to-Art Palette Journal and Online Art Magazine "Crave” describing her work and career.</p> 
           <br>
                 </div>
                 <div class="col-md-6">
