--- a/client/stylesheets/image.css
+++ b/client/stylesheets/image.css
@@ -20,20 +20,9 @@
 }
 
 #grid-container{
-    /* border: 1px dashed #444; 
-    text-align: justify; 
-    -ms-text-justify: distribute-all-lines;
-    text-justify: distribute-all-lines;
-    min-width: 612px; */
-    text-align:left;
+    text-align:center;
+    display: block;
   }
-
-#cbp-item {
-   vertical-align: top;
-   display: inline-block;
-   *display: inline;
-   zoom: 1;
-}
 
 .stretch {
     width: 100%;
