--- a/client/templates/common/image.html
+++ b/client/templates/common/image.html
@@ -23,9 +23,14 @@
             </div>
         </div>
         {{/if}}
-            <div class="cbp-title-dark">
-            <div class="cbp-l-grid-agency-title">{{title}}</div>
-            <div class="cbp-l-grid-agency-desc">{{artDescription}}</div>
+        <div class="cbp-title-dark">
+          <div class="row">
+            
+             <div class="col-md-12" align="center">
+                 <div class="cbp-l-grid-agency-title">{{title}}</div>
+                 <div class="cbp-l-grid-agency-desc">{{artDescription}}</div>
+             </div>
+          </div>
         </div>
     </div>
 </template>
