--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -1,4 +1,5 @@
 <template name="home">
+    <div class="increasefont">
     <!-- About Me Block -->
     <div class="container content-sm">
         <div class="row about-me">
@@ -133,5 +134,5 @@
         </li>
     </ul>
 
-    
+    </div>
 </template>
