Linked in link added in  home page

--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -19,7 +19,7 @@
                         <li><a class="rounded-x social_facebook" data-original-title="Facebook" href="https://www.facebook.com/lark.pilinsky.art"></a></li>
                         <li><a class="rounded-x social_twitter" data-original-title="Twitter" href="https://twitter.com/larisa_lark"></a></li>
                         <li><a class="rounded-x social_instagram" data-original-title="Instagram" href="https://www.instagram.com/lark_art/"></a></li>
-                        <li><a class="rounded-x social_linkedin" data-original-title="Linkedin" href="#"></a></li>
+                        <li><a class="rounded-x social_linkedin" data-original-title="Linkedin" href="https://www.linkedin.com/in/lark-larisa-pilinsky-2728254"></a></li>
                     </ul>
                 </div>
                 <p>
