added image loading icon while loading

--- a/client/templates/common/image.html
+++ b/client/templates/common/image.html
@@ -3,9 +3,11 @@
   
     <div class="cbp-caption">
         <div class="cbp-caption-defaultWrap">
+
             <a href="{{url}}" class="cbp-caption cbp-singlePageInline"
                data-title="{{title}}" data-lightbox={{getCurrentCategory}}>
                 <img src="{{url}}" alt="" class="img-thumbnail">
+                <div class="loader"> hello </div>
             </a>
          
          </div>
