--- a/client/stylesheets/custom.css
+++ b/client/stylesheets/custom.css
@@ -125,3 +125,13 @@ p {
     text-align: justify;
     text-justify: inter-word;
 }
+
+.loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('/img/page-loader.gif') 50% 50% no-repeat rgb(249,249,249);
+}
